# aicmd

./: .gitignore  README.md  build.sh  main.py  main.spec  notes.txt  pyproject.toml  requirements.txt
aicmd/: __init__.py  __main__.py  agent.py  agent_tools.py  api.py  cli.py  config.py  configure.py  paths.py  pyproject.toml  services.py
aicmd/providers/: __init__.py  base.py  llamaserver.py  ollama.py  openrouter.py  sessions.py
aicmd/tests/: test_chat.py  test_configure.py  test_llamaserver_provider.py
frontend/: README.md  app.js  index.html  styles.css
